--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,7 @@
     "type": "image/png"
     }],
   "start_url": "/",
-  "background_color": "#f2f3f5",
+  "background_color": "#1d1f21",
   "display": "standalone",
-  "theme_color": "#f60"
+  "theme_color": "#1d1f21"
 }
