--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "route-cache": "0.4.3",
     "serve-favicon": "^2.4.5",
     "timeago.js": "^3.0.2",
+    "viewerjs": "^1.0.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.16",
@@ -39,7 +40,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
     "chokidar": "^1.7.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "cz-conventional-changelog": "^2.1.0",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
