--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
     "chokidar": "^1.7.0",
+    "compression-webpack-plugin": "^1.1.11",
     "css-loader": "^0.28.11",
     "cz-conventional-changelog": "^2.1.0",
     "file-loader": "^1.1.5",
@@ -52,6 +53,7 @@
     "vue-loader": "^15.0.0-beta.1",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^3.8.1",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.20.0",
     "webpack-merge": "^4.1.1",
