--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "highlightjs": "^9.10.0",
+    "lru-cache": "^4.1.2",
     "marked": "^0.3.19",
     "route-cache": "0.4.3",
     "serve-favicon": "^2.4.5",
