--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "node server",
+    "lint": "eslint --ext .js --ext .vue src/ build/ server.js config.js",
+    "lint-fix": "eslint --fix --ext .js --ext .vue src/ build/ server.js config.js",
     "start": "cross-env NODE_ENV=production node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
@@ -18,6 +20,7 @@
     "axios": "^0.18.0",
     "compression": "^1.7.1",
     "cross-env": "^5.1.1",
+    "date-fns": "^1.29.0",
     "es6-promise": "^4.1.1",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -27,7 +30,6 @@
     "md5": "^2.2.1",
     "route-cache": "0.4.3",
     "serve-favicon": "^2.4.5",
-    "timeago.js": "^3.0.2",
     "viewerjs": "^1.0.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
@@ -38,12 +40,21 @@
   "devDependencies": {
     "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
     "chokidar": "^1.7.0",
     "css-loader": "^0.28.11",
     "cz-conventional-changelog": "^2.1.0",
+    "eslint": "4.x",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^4.0.3",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.1.0",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "rimraf": "^2.6.2",
