--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   ],
   "rules": {
     "semi": ["error", "always"],
-    "no-new": 0
+    "no-new": 0,
+    "prefer-promise-reject-errors": 0
   }
 }
