--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^1.29.0",
     "es6-promise": "^4.1.1",
     "express": "^4.16.2",
+    "gitalk": "^1.2.2",
     "highlightjs": "^9.10.0",
     "lru-cache": "^4.1.2",
     "marked": "^0.3.19",
