--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "es6-promise": "^4.1.1",
     "express": "^4.16.2",
     "gitalk": "^1.2.2",
-    "highlightjs": "^9.10.0",
+    "highlight.js": "^9.12.0",
     "lru-cache": "^4.1.2",
     "marked": "^0.3.19",
     "md5": "^2.2.1",
@@ -38,6 +38,13 @@
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
+    "@types/es6-promise": "^0.0.33",
+    "@types/highlight.js": "^9.12.2",
+    "@types/lru-cache": "^4.1.0",
+    "@types/marked": "^0.3.0",
+    "@types/md5": "^2.1.32",
+    "@types/viewerjs": "^0.7.2",
+    "autoprefixer": "^8.4.1",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.2",
@@ -61,9 +68,15 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "sw-precache-webpack-plugin": "^0.11.4",
+    "ts-loader": "^3.2.0",
+    "tslint": "^5.9.1",
+    "typescript": "^2.6.2",
     "url-loader": "^0.6.2",
-    "vue-loader": "^15.0.0-beta.1",
+    "vue-class-component": "^6.2.0",
+    "vue-loader": "^13.5.0",
+    "vue-property-decorator": "^6.0.0",
     "vue-template-compiler": "^2.5.16",
+    "vuex-class": "^0.3.0",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.20.0",
