feat: Use class component

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "node server",
-    "lint": "eslint --ext .js --ext .vue --ext src/ build/ server.js config.js",
-    "lint-fix": "eslint --fix --ext .js --ext .vue --ext src/ build/ server.js config.js && tslint --fix src/**/*.ts",
+    "lint": "eslint --ext .js --ext src/ build/ server.js config.js && tslint --fix src/**/*.ts src/**/*.vue",
+    "lint-fix": "eslint --fix --ext .js src/ build/ server.js config.js && tslint --fix src/**/*.ts src/**/*.vue",
     "start": "cross-env NODE_ENV=production node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
@@ -30,7 +30,6 @@
     "md5": "^2.2.1",
     "route-cache": "0.4.3",
     "serve-favicon": "^2.4.5",
-    "viewerjs": "^1.0.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.16",
@@ -43,6 +42,7 @@
     "@types/lru-cache": "^4.1.0",
     "@types/marked": "^0.3.0",
     "@types/md5": "^2.1.32",
+    "@types/photoswipe": "^4.0.28",
     "@types/viewerjs": "^0.7.2",
     "autoprefixer": "^8.4.1",
     "babel-core": "^6.26.0",
