--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "author": "Trevor <xizhouh@gmail.com>",
   "private": true,
   "scripts": {
+    "generate": "node generate",
     "dev": "node server",
-    "lint": "eslint --ext .js --ext src/ build/ server.js config.js && tslint --fix src/**/*.ts src/**/*.vue",
-    "lint-fix": "eslint --fix --ext .js src/ build/ server.js config.js && tslint --fix src/**/*.ts src/**/*.vue",
+    "lint": "eslint --ext .js --ext src/ build/ server.js generate.js && tslint --fix src/**/*.ts",
+    "lint-fix": "eslint --fix --ext .js src/ build/ server.js generate.js && tslint --fix src/**/*.ts",
     "start": "cross-env NODE_ENV=production node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
@@ -25,12 +26,17 @@
     "express": "^4.16.2",
     "gitalk": "^1.2.2",
     "highlight.js": "^9.12.0",
+    "inquirer": "^5.2.0",
     "lru-cache": "^4.1.2",
     "marked": "^0.3.19",
     "md5": "^2.2.1",
+    "ora": "^2.1.0",
     "route-cache": "0.4.3",
     "serve-favicon": "^2.4.5",
+    "shelljs": "^0.8.2",
     "vue": "^2.5.16",
+    "vue-class-component": "^6.2.0",
+    "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.16",
     "vuex": "^3.0.1",
@@ -53,7 +59,7 @@
     "chokidar": "^1.7.0",
     "css-loader": "^0.28.11",
     "cz-conventional-changelog": "^2.1.0",
-    "eslint": "4.x",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.3",
@@ -72,11 +78,8 @@
     "tslint": "^5.9.1",
     "typescript": "^2.6.2",
     "url-loader": "^0.6.2",
-    "vue-class-component": "^6.2.0",
     "vue-loader": "^13.5.0",
-    "vue-property-decorator": "^6.0.0",
     "vue-template-compiler": "^2.5.16",
-    "vuex-class": "^0.3.0",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.20.0",
