--- a/manifest.json
+++ b/manifest.json
@@ -2,31 +2,31 @@
   "name": "TB Blog",
   "short_name": "TB",
   "icons": [{
-      "src": "/public/logo-120.png",
+      "src": "./theme/theme-geek-dark/source/public/icons/logo-120.png",
       "sizes": "120x120",
       "type": "image/png"
     }, {
-      "src": "/public/logo-144.png",
+      "src": "./theme/theme-geek-dark/source/public/icons/logo-144.png",
       "sizes": "144x144",
       "type": "image/png"
     }, {
-      "src": "/public/logo-152.png",
+      "src": "./theme/theme-geek-dark/source/public/icons/logo-152.png",
       "sizes": "152x152",
       "type": "image/png"
     }, {
-      "src": "/public/logo-192.png",
+      "src": "./theme/theme-geek-dark/source/public/icons/logo-192.png",
       "sizes": "192x192",
       "type": "image/png"
     }, {
-      "src": "/public/logo-256.png",
+      "src": "./theme/theme-geek-dark/source/public/icons/logo-256.png",
       "sizes": "256x256",
       "type": "image/png"
     }, {
-      "src": "/public/logo-384.png",
+      "src": "./theme/theme-geek-dark/source/public/icons/logo-384.png",
       "sizes": "384x384",
       "type": "image/png"
     }, {
-    "src": "/public/logo-512.png",
+      "src": "./theme/theme-geek-dark/source/public/icons/logo-512.png",
     "sizes": "512x512",
     "type": "image/png"
     }],
